--- a/YesPojiQuota/YesPojiQuota.Windows.csproj
+++ b/YesPojiQuota/YesPojiQuota.Windows.csproj
@@ -109,15 +109,15 @@
     </Compile>
     <Compile Include="Migrations\YesContextModelSnapshot.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils\CustomNavigationService.cs" />
-    <Compile Include="Utils\DataService.cs" />
-    <Compile Include="Utils\ICustomNavigatorService.cs" />
-    <Compile Include="Utils\IDataService.cs" />
-    <Compile Include="Utils\ILoginService.cs" />
-    <Compile Include="Utils\IQuotaService.cs" />
-    <Compile Include="Utils\LoginService.cs" />
-    <Compile Include="Utils\QuotaService.cs" />
-    <Compile Include="Utils\QuotaServiceMock.cs" />
+    <Compile Include="Utils\Services\CustomNavigationService.cs" />
+    <Compile Include="Utils\Services\DataService.cs" />
+    <Compile Include="Utils\Interfaces\ICustomNavigatorService.cs" />
+    <Compile Include="Utils\Interfaces\IDataService.cs" />
+    <Compile Include="Utils\Interfaces\ILoginService.cs" />
+    <Compile Include="Utils\Interfaces\IQuotaService.cs" />
+    <Compile Include="Utils\Services\LoginService.cs" />
+    <Compile Include="Utils\Services\QuotaService.cs" />
+    <Compile Include="Utils\Services\QuotaServiceMock.cs" />
     <Compile Include="ViewModels\AccountsViewModel.cs" />
     <Compile Include="ViewModels\AccountViewModel.cs" />
     <Compile Include="ViewModels\MainPageViewModel.cs" />
