--- a/YesPojiQuota/YesPojiQuota.Windows.csproj
+++ b/YesPojiQuota/YesPojiQuota.Windows.csproj
@@ -109,6 +109,7 @@
     </Compile>
     <Compile Include="Migrations\YesContextModelSnapshot.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\Interfaces\INetworkService.cs" />
     <Compile Include="Utils\Services\CustomNavigationService.cs" />
     <Compile Include="Utils\Services\DataService.cs" />
     <Compile Include="Utils\Interfaces\ICustomNavigatorService.cs" />
@@ -116,6 +117,7 @@
     <Compile Include="Utils\Interfaces\ILoginService.cs" />
     <Compile Include="Utils\Interfaces\IQuotaService.cs" />
     <Compile Include="Utils\Services\LoginService.cs" />
+    <Compile Include="Utils\Services\NetworkService.cs" />
     <Compile Include="Utils\Services\QuotaService.cs" />
     <Compile Include="Utils\Services\QuotaServiceMock.cs" />
     <Compile Include="ViewModels\AccountsViewModel.cs" />
