--- a/YesPojiQuota/YesPojiQuota.Windows.csproj
+++ b/YesPojiQuota/YesPojiQuota.Windows.csproj
@@ -176,6 +176,9 @@
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
     <Content Include="Assets\Wide310x150Logo.scale-400.png" />
     <None Include="Package.StoreAssociation.xml" />
+    <Content Include="HTMLSource\LoginPageFail.html" />
+    <Content Include="HTMLSource\LoginPageStart.html" />
+    <Content Include="HTMLSource\SuccessResoponse.html" />
     <Content Include="Properties\Default.rd.xml" />
   </ItemGroup>
   <ItemGroup>
