--- a/YesPojiQuota/YesPojiQuota.Windows.csproj
+++ b/YesPojiQuota/YesPojiQuota.Windows.csproj
@@ -109,6 +109,7 @@
     </Compile>
     <Compile Include="Migrations\YesContextModelSnapshot.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\Helpers\EncryptionHelper.cs" />
     <Compile Include="Utils\Interfaces\INetworkService.cs" />
     <Compile Include="Utils\Services\CustomNavigationService.cs" />
     <Compile Include="Utils\Services\DataService.cs" />
