--- a/YesPojiQuota/project.json
+++ b/YesPojiQuota/project.json
@@ -8,7 +8,8 @@
     "MvvmLight": "5.3.0",
     "MyToolkit": "2.5.16",
     "MyToolkit.Extended": "2.5.16",
-    "Win2D.uwp": "1.19.0"
+    "System.Reactive": "3.1.1",
+    "Win2D.uwp": "1.20.0"
   },
   "frameworks": {
     "uap10.0": {}
