--- a/YesPojiQuota/YesPojiQuota.Windows.csproj
+++ b/YesPojiQuota/YesPojiQuota.Windows.csproj
@@ -102,27 +102,13 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Data\YesContext.cs" />
     <Compile Include="Migrations\20170405092719_MyFirstMigration.cs" />
     <Compile Include="Migrations\20170405092719_MyFirstMigration.designer.cs">
       <DependentUpon>20170405092719_MyFirstMigration.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\YesContextModelSnapshot.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils\Helpers\EncryptionHelper.cs" />
-	<Compile Include="Utils\Converters\AccountTypeConverter.cs" />
-    <Compile Include="Utils\Enums\NetworkCondition.cs" />
-    <Compile Include="Utils\Interfaces\INetworkService.cs" />
-    <Compile Include="Utils\Services\CustomNavigationService.cs" />
-    <Compile Include="Utils\Services\DataService.cs" />
-    <Compile Include="Utils\Interfaces\ICustomNavigatorService.cs" />
-    <Compile Include="Utils\Interfaces\IDataService.cs" />
-    <Compile Include="Utils\Interfaces\ILoginService.cs" />
-    <Compile Include="Utils\Interfaces\IQuotaService.cs" />
-    <Compile Include="Utils\Services\LoginService.cs" />
-    <Compile Include="Utils\Services\NetworkService.cs" />
-    <Compile Include="Utils\Services\QuotaService.cs" />
-    <Compile Include="Utils\Services\QuotaServiceMock.cs" />
+    <Compile Include="Utils\Converters\AccountTypeConverter.cs" />
     <Compile Include="ViewModels\AccountsViewModel.cs" />
     <Compile Include="ViewModels\AccountViewModel.cs" />
     <Compile Include="ViewModels\MainPageViewModel.cs" />
@@ -208,8 +194,12 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Models\" />
+    <ProjectReference Include="..\YesPojiQuota.Core\YesPojiQuota.Core.csproj">
+      <Project>{2D15D326-FC0F-4855-993B-FD848C12B1B0}</Project>
+      <Name>YesPojiQuota.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
