--- a/YesPojiQuota.Core/project.json
+++ b/YesPojiQuota.Core/project.json
@@ -3,7 +3,8 @@
     "HtmlAgilityPack": "1.4.9.5",
     "Microsoft.EntityFrameworkCore": "1.1.1",
     "Microsoft.EntityFrameworkCore.Sqlite": "1.1.1",
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.1",
+    "Microsoft.EntityFrameworkCore.Tools": "1.1.0",
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.2",
     "MvvmLightLibs": "5.3.0",
     "System.Reactive": "3.1.1"
   },
