--- a/YesPojiQuota.Core/YesPojiQuota.Core.csproj
+++ b/YesPojiQuota.Core/YesPojiQuota.Core.csproj
@@ -120,6 +120,8 @@
       <DependentUpon>20170420073902_First.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\YesContextModelSnapshot.cs" />
+    <Compile Include="Models\Account.cs" />
+    <Compile Include="Models\Quota.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CustomNavigationService.cs" />
     <Compile Include="Services\DataService.cs" />
@@ -129,9 +131,7 @@
     <Compile Include="Services\QuotaServiceMock.cs" />
     <EmbeddedResource Include="Properties\YesPojiQuota.Core.rd.xml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
