--- a/YesPojiQuota.Windows/project.json
+++ b/YesPojiQuota.Windows/project.json
@@ -1,6 +1,7 @@
 ﻿{
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.2",
+    "Mika.Toolkit.Uwp.UI.Animations": "1.1.0",
     "MvvmLight": "5.3.0",
     "System.Reactive": "3.1.1",
     "Win2D.uwp": "1.20.0"
