--- a/YesPojiQuota.Core/YesPojiQuota.Core.csproj
+++ b/YesPojiQuota.Core/YesPojiQuota.Core.csproj
@@ -110,7 +110,9 @@
     <Compile Include="Data\YesContext.cs" />
     <Compile Include="Enums\AccountType.cs" />
     <Compile Include="Enums\NetworkCondition.cs" />
+    <Compile Include="Helpers\Constants.cs" />
     <Compile Include="Helpers\EncryptionHelper.cs" />
+    <Compile Include="Helpers\Secrets.cs" />
     <Compile Include="Interfaces\Delegates.cs" />
     <Compile Include="Interfaces\ICustomNavigatorService.cs" />
     <Compile Include="Interfaces\IDataService.cs" />
@@ -125,6 +127,7 @@
     <Compile Include="Models\Account.cs" />
     <Compile Include="Models\Quota.cs" />
     <Compile Include="Models\SessionData.cs" />
+    <Compile Include="Observers\NetworkChangeObserver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CustomNavigationService.cs" />
     <Compile Include="Services\DataService.cs" />
