--- a/YesPojiQuota.Core/project.json
+++ b/YesPojiQuota.Core/project.json
@@ -6,7 +6,8 @@
     "Microsoft.EntityFrameworkCore.Tools": "1.1.0",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.2",
     "MvvmLightLibs": "5.3.0",
-    "System.Reactive": "3.1.1"
+    "System.Reactive": "3.1.1",
+    "System.Threading": "4.3.0"
   },
   "frameworks": {
     "uap10.0": {}
