--- a/YesPojiQuota.Core/YesPojiQuota.Core.csproj
+++ b/YesPojiQuota.Core/YesPojiQuota.Core.csproj
@@ -112,6 +112,9 @@
     <Compile Include="Enums\NetworkCondition.cs" />
     <Compile Include="Helpers\Constants.cs" />
     <Compile Include="Helpers\EncryptionHelper.cs" />
+    <Compile Include="Helpers\Exceptions\QuotaException.cs" />
+    <Compile Include="Helpers\Exceptions\YesNotConnectedException.cs" />
+    <Compile Include="Helpers\LoadingMessage.cs" />
     <Compile Include="Helpers\Secrets.cs" />
     <Compile Include="Interfaces\Delegates.cs" />
     <Compile Include="Interfaces\ICustomNavigatorService.cs" />
@@ -127,6 +130,7 @@
     <Compile Include="Models\Account.cs" />
     <Compile Include="Models\Quota.cs" />
     <Compile Include="Models\SessionData.cs" />
+    <Compile Include="Observers\NetworkChangeHandler.cs" />
     <Compile Include="Observers\NetworkChangeObserver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CustomNavigationService.cs" />
