--- a/YesPojiQuota.Windows/YesPojiQuota.Windows.csproj
+++ b/YesPojiQuota.Windows/YesPojiQuota.Windows.csproj
@@ -111,6 +111,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\ColourHelper.cs" />
     <Compile Include="Utils\Converters\AccountTypeConverter.cs" />
+    <Compile Include="Utils\LoadingMessage.cs" />
     <Compile Include="ViewModels\AccountsViewModel.cs" />
     <Compile Include="ViewModels\AccountViewModel.cs" />
     <Compile Include="ViewModels\InnAppToastViewModel.cs" />
