--- a/YesPojiQuota.Windows/project.json
+++ b/YesPojiQuota.Windows/project.json
@@ -1,5 +1,6 @@
 ﻿{
   "dependencies": {
+    "Microsoft.EntityFrameworkCore": "1.1.2",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.2",
     "Mika.Toolkit.Uwp.UI.Animations": "1.1.0",
     "MvvmLight": "5.3.0",
