--- a/YesPojiQuota.Windows/project.json
+++ b/YesPojiQuota.Windows/project.json
@@ -5,6 +5,7 @@
     "Mika.Toolkit.Uwp.UI.Animations": "1.1.0",
     "MvvmLight": "5.3.0",
     "System.Reactive": "3.1.1",
+    "Template10": "1.1.12",
     "Win2D.uwp": "1.20.0"
   },
   "frameworks": {
