--- a/YesPojiQuota.Core/YesPojiQuota.Core.csproj
+++ b/YesPojiQuota.Core/YesPojiQuota.Core.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Observers\NetworkChangeHandler.cs" />
     <Compile Include="Observers\NetworkChangeObserver.cs" />
     <Compile Include="Observers\QuotaObserverManager.cs" />
+    <Compile Include="Observers\YesSessionUpdater.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CustomNavigationService.cs" />
     <Compile Include="Services\DataService.cs" />
