--- a/YesPojiQuota.Core/project.json
+++ b/YesPojiQuota.Core/project.json
@@ -1,10 +1,11 @@
 ﻿{
   "dependencies": {
-    "HtmlAgilityPack": "1.4.9.5",
-    "Microsoft.EntityFrameworkCore": "1.1.1",
-    "Microsoft.EntityFrameworkCore.Sqlite": "1.1.1",
-    "Microsoft.EntityFrameworkCore.Tools": "1.1.0",
+    "HtmlAgilityPack": "1.5.1",
+    "Microsoft.EntityFrameworkCore": "1.1.2",
+    "Microsoft.EntityFrameworkCore.Sqlite": "1.1.2",
+    "Microsoft.EntityFrameworkCore.Tools": "1.1.1",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.2",
+    "Microsoft.Toolkit.Uwp.Notifications": "2.0.0",
     "MvvmLightLibs": "5.3.0",
     "System.Reactive": "3.1.1",
     "System.Threading": "4.3.0"
