-Updated Windows YesPojiQuota.Project -Updated .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -263,3 +263,4 @@ __pycache__/
 /YesPojiQuota.Windows/_scale-400.appx
 /YesPojiQuota.Core/Helpers/Secrets.cs
 /YesPojiQuota.Core/Helpers/Secrets.cs
+/YesPojiQuota.Windows/Assets/Thumbs.db
