--- a/YesPojiQuota.Windows/YesPojiQuota.Windows.csproj
+++ b/YesPojiQuota.Windows/YesPojiQuota.Windows.csproj
@@ -111,7 +111,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\ColourHelper.cs" />
     <Compile Include="Utils\Converters\AccountTypeConverter.cs" />
+    <Compile Include="Utils\DatabaseMigrator.cs" />
     <Compile Include="Utils\LoadingMessage.cs" />
+    <Compile Include="Utils\Notifications\LoginToast.cs" />
     <Compile Include="ViewModels\AccountsPanelViewModel.cs" />
     <Compile Include="ViewModels\AccountViewModel.cs" />
     <Compile Include="ViewModels\InnAppToastViewModel.cs" />
@@ -219,6 +221,7 @@
       <Name>Windows Mobile Extensions for the UWP</Name>
     </SDKReference>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
