--- a/YesPojiQuota.Windows/project.json
+++ b/YesPojiQuota.Windows/project.json
@@ -2,11 +2,13 @@
   "dependencies": {
     "Microsoft.EntityFrameworkCore": "1.1.2",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.2",
+    "Microsoft.Toolkit.Uwp.Notifications": "2.0.0",
     "Mika.Toolkit.Uwp.UI.Animations": "1.1.0",
     "MvvmLight": "5.3.0",
+    "QueryString.NET": "1.0.0",
     "System.Reactive": "3.1.1",
     "Template10": "1.1.12",
-    "Win2D.uwp": "1.20.0"
+    "Win2D.uwp": "1.21.0"
   },
   "frameworks": {
     "uap10.0": {}
