--- a/CoreLibs/CoreLibs.csproj
+++ b/CoreLibs/CoreLibs.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard1.6</TargetFramework>
+    <TargetFramework>netstandard1.4</TargetFramework>
     <PackageTargetFallback>portable-net45+win+wpa81+wp80</PackageTargetFallback>
     <ApplicationIcon />
     <OutputType>Library</OutputType>
@@ -9,16 +9,23 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack" Version="1.5.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="1.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="1.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="1.1.2" />
     <PackageReference Include="MvvmLightLibs" Version="5.3.0" />
+    <PackageReference Include="System.Reactive.Linq" Version="3.1.1" />
   </ItemGroup>
 
   <ItemGroup>
     <Compile Update="Migrations\20170420073902_First.Designer.cs">
       <DependentUpon>20170420073902_First.cs</DependentUpon>
     </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Managers\" />
+    <Folder Include="Notifications\" />
   </ItemGroup>
 
 </Project>
