--- a/CoreLibs/CoreLibs.csproj
+++ b/CoreLibs/CoreLibs.csproj
@@ -13,7 +13,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="1.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="1.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="1.1.2" />
-    <PackageReference Include="MvvmLightLibs" Version="5.3.0" />
+    <PackageReference Include="MvvmCross" Version="5.3.2" />
+    <PackageReference Include="MvvmCross.Plugin.Messenger" Version="5.3.2" />
+    <PackageReference Include="MvvmCross.Plugin.Share" Version="5.3.2" />
     <PackageReference Include="System.Reactive.Linq" Version="3.1.1" />
   </ItemGroup>
 
