Revert "Update appveyor.yml"
This reverts commit a8368959ccfe73c4533388559e136ee366bd1346.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,7 +30,7 @@ assembly_info:
 
 before_build:
 
-- cmd: pushd . && nuget restore && popd
+- cmd: pushd . && cd src && nuget restore && popd
 
 build:
 
