--- a/YesPojiQuota.Tasks/YesPojiQuota.Tasks.csproj
+++ b/YesPojiQuota.Tasks/YesPojiQuota.Tasks.csproj
@@ -107,7 +107,9 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="LoginToastActionBackgroundTask.cs" />
+    <Compile Include="Helpers\ToastHelper.cs" />
+    <Compile Include="NetworkChangeTask.cs" />
+    <Compile Include="LoginToastActionTask.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestTask.cs" />
   </ItemGroup>
@@ -118,6 +120,16 @@
     <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications">
       <Version>2.0.0</Version>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\YesPojiQuota.Core\YesPojiQuota.Core.csproj">
+      <Project>{2D15D326-FC0F-4855-993B-FD848C12B1B0}</Project>
+      <Name>YesPojiQuota.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\YesPojiUtmLib\YesPojiUtmLib\YesPojiUtmLib.csproj">
+      <Project>{F1A6413C-DB09-47F7-BC35-BA17A7AE56DD}</Project>
+      <Name>YesPojiUtmLib</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
