--- a/YesPojiQuota.Core.Windows/YesPojiQuota.Core.Windows.csproj
+++ b/YesPojiQuota.Core.Windows/YesPojiQuota.Core.Windows.csproj
@@ -106,13 +106,15 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Notifications\Toasts\LoginToast.cs" />
+    <Compile Include="Notifications\Toasts\ToastBase.cs" />
     <Compile Include="Services\ICustomNavigatorService.cs" />
     <Compile Include="Services\WindowsEncryptionService.cs" />
     <Compile Include="Managers\BackgroundTaskManager.cs" />
-    <Compile Include="Notifications\Toast.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CustomNavigationService.cs" />
     <Compile Include="Utils\ToastHelper.cs" />
+    <Compile Include="Utils\ToastManager.cs" />
     <EmbeddedResource Include="Properties\YesPojiQuota.Core.Windows.rd.xml" />
   </ItemGroup>
   <ItemGroup>
@@ -136,6 +138,9 @@
     </PackageReference>
     <PackageReference Include="MvvmLightLibs">
       <Version>5.3.0</Version>
+    </PackageReference>
+    <PackageReference Include="QueryString.NET">
+      <Version>1.0.0</Version>
     </PackageReference>
     <PackageReference Include="System.Reactive">
       <Version>3.1.1</Version>
