--- a/YesPojiQuota.Core.Windows/YesPojiQuota.Core.Windows.csproj
+++ b/YesPojiQuota.Core.Windows/YesPojiQuota.Core.Windows.csproj
@@ -110,17 +110,29 @@
     <Compile Include="Notifications\Live Tiles\LiveTileBase.cs" />
     <Compile Include="Notifications\Toasts\LoginToast.cs" />
     <Compile Include="Notifications\Toasts\QuotaToast.cs" />
+    <Compile Include="Notifications\Toasts\SessionToast.cs" />
     <Compile Include="Notifications\Toasts\ToastBase.cs" />
     <Compile Include="Services\ICustomNavigatorService.cs" />
+    <Compile Include="Services\LocalStorageService.cs" />
     <Compile Include="Services\WindowsEncryptionService.cs" />
     <Compile Include="Managers\BackgroundTaskManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CustomNavigationService.cs" />
+    <Compile Include="Utils\AppServiceLocator.cs" />
+    <Compile Include="Utils\Messages\LoadingMessage.cs" />
+    <Compile Include="Utils\Messages\LoginMessage.cs" />
     <Compile Include="Utils\ToastHelper.cs" />
     <Compile Include="Utils\ToastManager.cs" />
+    <Compile Include="Utils\ViewModelKeys.cs" />
+    <Compile Include="Utils\WindowsNetworkChangeHandler.cs" />
+    <Compile Include="ViewModels\MainViewModel.cs" />
+    <Compile Include="ViewModels\SessionToastViewModel.cs" />
     <EmbeddedResource Include="Properties\YesPojiQuota.Core.Windows.rd.xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="CommonServiceLocator">
+      <Version>1.3.0</Version>
+    </PackageReference>
     <PackageReference Include="HtmlAgilityPack">
       <Version>1.6.5</Version>
     </PackageReference>
@@ -135,6 +147,9 @@
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.0.1</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Toolkit.Uwp">
+      <Version>2.1.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications">
       <Version>2.0.0</Version>
