--- a/YesPojiQuota.Windows/YesPojiQuota.Windows.csproj
+++ b/YesPojiQuota.Windows/YesPojiQuota.Windows.csproj
@@ -108,7 +108,7 @@
     <Compile Include="Utils\Converters\AccountTypeConverter.cs" />
     <Compile Include="ViewModels\AccountsPanelViewModel.cs" />
     <Compile Include="ViewModels\AccountViewModel.cs" />
-    <Compile Include="ViewModels\InnAppToastViewModel.cs" />
+    <Compile Include="ViewModels\StatusViewModel.cs" />
     <Compile Include="ViewModels\MainPageViewModel.cs" />
     <Compile Include="ViewModels\QuotaViewModel.cs" />
     <Compile Include="ViewModels\SettingsViewModel.cs" />
@@ -232,8 +232,8 @@
     <PackageReference Include="Mika.Toolkit.Uwp.UI.Animations">
       <Version>1.1.0</Version>
     </PackageReference>
-    <PackageReference Include="MvvmLight">
-      <Version>5.3.0</Version>
+    <PackageReference Include="MvvmLightLibsStd10">
+      <Version>5.4.0.1-alpha</Version>
     </PackageReference>
     <PackageReference Include="QueryString.NET">
       <Version>1.0.0</Version>
