--- a/YesPojiQuota.Core.Windows/YesPojiQuota.Core.Windows.csproj
+++ b/YesPojiQuota.Core.Windows/YesPojiQuota.Core.Windows.csproj
@@ -112,8 +112,8 @@
     <Compile Include="Notifications\Toasts\QuotaToast.cs" />
     <Compile Include="Notifications\Toasts\SessionToast.cs" />
     <Compile Include="Notifications\Toasts\ToastBase.cs" />
-    <Compile Include="Services\ICustomNavigatorService.cs" />
     <Compile Include="Services\LocalStorageService.cs" />
+    <Compile Include="Services\NavigationServiceEx.cs" />
     <Compile Include="Services\WindowsEncryptionService.cs" />
     <Compile Include="Managers\BackgroundTaskManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -130,9 +130,6 @@
     <EmbeddedResource Include="Properties\YesPojiQuota.Core.Windows.rd.xml" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CommonServiceLocator">
-      <Version>1.3.0</Version>
-    </PackageReference>
     <PackageReference Include="HtmlAgilityPack">
       <Version>1.6.5</Version>
     </PackageReference>
@@ -154,8 +151,8 @@
     <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications">
       <Version>2.0.0</Version>
     </PackageReference>
-    <PackageReference Include="MvvmLightLibs">
-      <Version>5.3.0</Version>
+    <PackageReference Include="MvvmLightLibsStd10">
+      <Version>5.4.0.1-alpha</Version>
     </PackageReference>
     <PackageReference Include="QueryString.NET">
       <Version>1.0.0</Version>
