--- a/YesPojiQuota.Core/YesPojiQuota.Core.csproj
+++ b/YesPojiQuota.Core/YesPojiQuota.Core.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="1.1.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="1.1.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="1.1.4" />
+    <PackageReference Include="MvvmLightLibsStd10" Version="5.4.0.1-alpha" />
     <PackageReference Include="System.Reactive" Version="3.1.1" />
   </ItemGroup>
 
