--- a/YesPojiQuota.Core.Windows/YesPojiQuota.Core.Windows.csproj
+++ b/YesPojiQuota.Core.Windows/YesPojiQuota.Core.Windows.csproj
@@ -119,14 +119,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CustomNavigationService.cs" />
     <Compile Include="Utils\AppServiceLocator.cs" />
-    <Compile Include="Utils\Messages\LoadingMessage.cs" />
-    <Compile Include="Utils\Messages\LoginMessage.cs" />
+    <Compile Include="Utils\DispatcherHelperEx.cs" />
     <Compile Include="Utils\ToastHelper.cs" />
     <Compile Include="Utils\ToastManager.cs" />
-    <Compile Include="Utils\ViewModelKeys.cs" />
     <Compile Include="Utils\WindowsNetworkChangeHandler.cs" />
-    <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\SessionToastViewModel.cs" />
+    <Compile Include="ViewModels\SettingsViewModel.cs" />
     <EmbeddedResource Include="Properties\YesPojiQuota.Core.Windows.rd.xml" />
   </ItemGroup>
   <ItemGroup>
