--- a/YesPojiQuota.Windows/YesPojiQuota.Windows.csproj
+++ b/YesPojiQuota.Windows/YesPojiQuota.Windows.csproj
@@ -106,7 +106,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\ColourHelper.cs" />
     <Compile Include="Utils\Converters\AccountTypeConverter.cs" />
-    <Compile Include="ViewModels\ViewModelLocator.cs" />
+    <Compile Include="Utils\ViewModelNavigationConfigurer.cs" />
+    <Compile Include="ViewModels\WindowsViewModelLocator.cs" />
     <Compile Include="Views\BackDrop.cs" />
     <Compile Include="Views\Partials\AccountInputDialog.xaml.cs">
       <DependentUpon>AccountInputDialog.xaml</DependentUpon>
@@ -247,6 +248,7 @@
       <Name>Windows Mobile Extensions for the UWP</Name>
     </SDKReference>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
